--- a/Genma_Framasoft.tex
+++ b/Genma_Framasoft.tex
@@ -75,12 +75,56 @@
 %----------------------------------------------------------------------------------------
 \begin{frame}
 \Huge{\centerline{Framasoft}}
+\begin{center}
+\includegraphics[scale=0.6]{./images/pingouinVolantRefait.jpg}
+\end{center}
 \end{frame}
 
+%------------------------------------------------
+\begin{frame}
+\frametitle{Framasoft c'est quoi?}
+
+\begin{block}{Présentation}
+\justifying{
+Framasoft est une association francophone de promotion et diffusion des logiciels libres. C'est aussi
+\begin{itemize}
+\item Un réseau dédié à la promotion du « libre » en général et du logiciel libre en particulier.
+\item De nombreux services et projets innovants mis librement à disposition du grand public.
+\item Une communauté de bénévoles soutenue par une association d’intérêt général.
+\item Une invitation à bâtir ensemble un monde de partage et de coopération.
+\end{itemize}
+}
+\end{block}
+Plus de détail sur \url{http://www.framasoft.org}
+\end{frame}
+
+%------------------------------------------------
+\begin{frame}
+\frametitle{Framasoft en quelques chiffres}
+
+\begin{block}{Des chiffres}
+\justifying{
+\begin{itemize}
+\item 12 ans d’existence, 1 association et 2 permanents
+\item 1 réseau, 1 000 000 visites par mois
+\item 20 projets, 15 serveurs, 50 noms de domaine et 30 CMS déployés
+\item 10 000 abonnés Twitter
+\item 1 600 logiciels libres dans notre annuaire
+\item 200 000 logiciels installés via Framapack
+\item 750 000 clés framakeys téléchargées
+\item 4 000 000 clés diffusées
+\end{itemize}
+}
+\end{block}
+Plus de détail sur \url{http://www.framasoft.org}
+\end{frame}
 
 %----------------------------------------------------------------------------------------
 \begin{frame}
 \Huge{\centerline{Framasoft et la dégooglisation}}
+\begin{center}
+\includegraphics[scale=0.6]{./images/cloud.jpg}
+\end{center}
 \end{frame}
 
 \begin{frame}
@@ -106,11 +150,13 @@ Après avoir mis en place Framapad, Framadate, Framindmap, Framanews et le petit
 
 \begin{block}{L'objectif}
 \justifying{
-Installer, face à chaque service propriétaire, un service L.E.D.S. hébergé par les soins de Framasoft. 
+Les logiciels libres, de par leur nature ouverte, sont les seuls à vraiment garantir le respect de votre vie privée.
+\\~\\
+Il faut donc installer, face à chaque service propriétaire, un service hébergé par les soins de Framasoft. 
 \\~\\L’association s’inscrit dans un contexte d’ouverture en encourageant les projets qui participeront à cet effort d’émancipation des « grands de l’Internet ».
 }
 \end{block}
-Plius de détail sur \url{http://degooglisons-internet.org/}
+Plus de détail sur \url{http://degooglisons-internet.org/}
 \end{frame}
 
 
@@ -125,9 +171,12 @@ Plius de détail sur \url{http://degooglisons-internet.org/}
 \item Une centralisation nuisible (frein à l'innovation)
 \item  Les utilisateurs de ces services derniers ne contrôlent plus leur vie numérique
 \end{itemize}
+\begin{center}
+\includegraphics[scale=0.3]{./images/fight.png}
+\end{center}
 }
 \end{block}
-Plius de détail sur \url{http://degooglisons-internet.org/}
+Pius de détail sur \url{http://degooglisons-internet.org/}
 \end{frame}
 
 %------------------------------------------------
@@ -143,10 +192,13 @@ Les services en ligne toujours plus centralisés de géants tentaculaires comme 
 \item Centralisation
  \item Fermeture
 \end{itemize}
+\begin{center}
+\includegraphics[scale=0.3]{./images/steve.png}\quad
+\includegraphics[scale=0.3]{./images/legion.png}
+\end{center}
 }
 \end{block}
-
-Plius de détail sur \url{http://degooglisons-internet.org/}
+Pius de détail sur \url{http://degooglisons-internet.org/}
 \end{frame}
 
 %------------------------------------------------
@@ -162,9 +214,12 @@ Framasoft souhaite faire face à ces dangers menaçant nos vies numériques en p
 \item décentralisés 
 \item et solidaires.
 \end{itemize}
+\begin{center}
+\includegraphics[scale=0.3]{./images/potion.png}
+\end{center}
 }
 \end{block}
-Plius de détail sur \url{http://degooglisons-internet.org/}
+Plus de détail sur \url{http://degooglisons-internet.org/}
 \end{frame}
 
 %------------------------------------------------
@@ -181,47 +236,80 @@ Le projet « Dégooglisons Internet » - qui ne concerne d'ailleurs pas que Goog
 \end{itemize}
 }
 \end{block}
-Plius de détail sur \url{http://degooglisons-internet.org/}
+Plus de détail sur \url{http://degooglisons-internet.org/}
 \end{frame}
 
 %----------------------------------------------------------------------------------------
 \begin{frame}
 \Huge{\centerline{Les services "cloud" de Framasoft}}
+\begin{center}
+\includegraphics[scale=0.6]{./images/Framacloud.jpg}
+\end{center}
 \end{frame}
 %------------------------------------------------
 
 \begin{frame}
 \begin{center}
-\includegraphics[scale=0.4]{./images/Framapad.jpg}
+\includegraphics[scale=0.5]{./images/Framapad.jpg}
 \end{center}
 \end{frame}
 
 \begin{frame}
 \begin{center}
-\includegraphics[scale=0.4]{./images/FramaCalc.jpg}
+\includegraphics[scale=0.5]{./images/FramaCalc.jpg}
 \end{center}
 \end{frame}
 
 \begin{frame}
 \begin{center}
-\includegraphics[scale=0.4]{./images/Framadate.jpg}
+\includegraphics[scale=0.5]{./images/Framadate.jpg}
 \end{center}
 \end{frame}
 
 \begin{frame}
 \begin{center}
-\includegraphics[scale=0.4]{./images/Framavectoriel.jpg}
+\includegraphics[scale=0.5]{./images/Framavectoriel.jpg}
 \end{center}
 \end{frame}
 
 \begin{frame}
 \begin{center}
-\includegraphics[scale=0.4]{./images/Framindmap.jpg}
+\includegraphics[scale=0.5]{./images/Framindmap.jpg}
 \end{center}
 \end{frame}
 
 \begin{frame}
-\Huge{\centerline{Plein d'autres}}
+\begin{center}
+\includegraphics[scale=0.5]{./images/Framasphere.jpg}
+\end{center}
+\end{frame}
+
+%------------------------------------------------
+\begin{frame}
+\frametitle{Framasphère}
+
+\begin{block}{Qu'est ce que Framasphère ?}
+\justifying{
+Framasphère est un nœud (appelé pod) du réseau social libre Diaspora
+}
+\end{block}
+
+\begin{block}{Pourquoi utiliser Framasphère ?}
+\justifying{
+Depuis Framasphère, vous pouvez :
+\begin{itemize}
+\item échanger des messages et photos avec n'importe quelle autre personne du réseau diaspora*
+\item gérer vos contacts, tags, mentions, repartages...
+\item garder le contrôle de vos données
+\item publier sur d'autres réseaux sociaux (Facebook, Twitter, Tumblr ou Wordpress)
+\item en somme, apprécier toutes les fonctionnalités d'un réseau social sans craindre la censure et dans le respect de votre vie privée
+\end{itemize}
+}
+\end{block}
+\end{frame}
+
+\begin{frame}
+\Huge{\centerline{Et d'autres à l'avenir...}}
 \end{frame}
 
 \begin{frame}
@@ -230,10 +318,17 @@ Plius de détail sur \url{http://degooglisons-internet.org/}
 \end{center}
 \end{frame}
 
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\Huge{\centerline{C'est gratuit...}}
+\Huge{\centerline{...mais ce n'est plus nous le produit!}}
+\end{frame}
+%------------------------------------------------
+
 
 %----------------------------------------------------------------------------------------
 \begin{frame}
-\Huge{\centerline{Soutenir Framasoft}}
+\Huge{\centerline{Donc il faut soutenir Framasoft !!!}}
 \end{frame}
 %------------------------------------------------
 
@@ -267,10 +362,36 @@ Plius de détail sur \url{http://degooglisons-internet.org/}
 \frametitle{Framasoft est transparent sur l'usage des dons}
 
 \begin{center}
-\includegraphics[scale=0.3]{./images/graphique.png}
+\includegraphics[scale=0.3]{./images/graphique.jpg}
 \\~\\
 \url{https://soutenir.framasoft.org/}
 \end{center}
+\end{frame}
+
+
+%----------------------------------------------------------------------------------------
+\begin{frame}
+\Huge{\centerline{Participer à l'aventure Framasoft}}
+\end{frame}
+%------------------------------------------------
+
+%------------------------------------------------
+\begin{frame}
+\frametitle{Participer à Framasoft}
+
+\begin{block}{Comment participer?}
+\justifying{
+En participer aux projets existants :
+\begin{itemize}
+\item Support technique (administration, développement)
+\item Traduction, relecture...
+\item Communication, graphisme...
+\end{itemize}
+Ou en proposant un nouveau projet!
+}
+\\~\\
+\url{http://framalistes.org/sympa/lists}
+\end{block}
 \end{frame}
 
 %----------------------------------------------------------------------------------------
@@ -280,25 +401,47 @@ Plius de détail sur \url{http://degooglisons-internet.org/}
 
 %------------------------------------------------
 \begin{frame}
+\frametitle{Halte aux trolls 1/2}
+
+\begin{center}
+\includegraphics[scale=0.5]{./images/troll.jpg}
+\end{center}
+\end{frame}
+
+%------------------------------------------------
+\begin{frame}
+\frametitle{Halte aux trolls 2/2}
+
+\begin{center}
+\includegraphics[scale=0.5]{./images/troll2.jpg}
+\end{center}
+\end{frame}
+
+%------------------------------------------------
+\begin{frame}
 \frametitle{Que retenir?}
 
-\begin{block}{Ce qu'il faut retenir}
+\begin{block}{Ce qu'il faut retenir de cette présentation}
 \justifying{
+C'est qu'il faut :
 \begin{itemize}
-\item Utiliser les services de Framasoft
-\item Donner à Framasoft
-\item Se lancer à son tour (autohebergement...)
+\item utiliser les services de Framasoft,
+\item donner à Framasoft,
+\item se lancer à son tour (autohebergement...).
 \end{itemize}
 }
 \end{block}
 \end{frame}
 
 
-
 %----------------------------------------------------------------------------------------
 \begin{frame}
 \Huge{\centerline{Merci de votre attention.}}
 \Huge{\centerline{Place aux questions. Débattons...}}
+\begin{center}
+\includegraphics[scale=0.2]{./images/chat.jpg}
+\end{center}
+
 \end{frame}
 
 \end{document}
