--- a/Genma_Framasoft.tex
+++ b/Genma_Framasoft.tex
@@ -63,8 +63,8 @@
 \textbf{Ce que je fais?}
 \\ Plein de choses dont:
 \begin{itemize}
-\item Des "chiffrofêtes"
-\item Framasoft
+\item Organiser des "chiffrofêtes"
+\item Soutenir modestement Framasoft
 \end{itemize}
 
 \column{.5\textwidth} 
